--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,7 @@ jobs:
       working-directory: ./tech123
 
     - name : apply Terraform deployment
-      run : terraform apply -auto-approve
+      run : terraform destroy -auto-approve
       working-directory: ./tech123
 
-    #- name: destroy Terraform deployment
-    #  run: terraform destroy -auto-approve
-    # working-directory: ./abc-technology123 
-      
+  
