--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       working-directory: ./tech123
 
     - name : apply Terraform deployment
-      run : terraform destroy -auto-approve
+      run : terraform apply -auto-approve
       working-directory: ./tech123
 
   
