destroy Internal ALB, ASG, scaling policies, and SSM access to 3-tier VPC infrastructure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       working-directory: ./tech123
 
     - name : apply Terraform deployment
-      run : terraform apply -auto-approve
+      run : terraform destroy -auto-approve
       working-directory: ./tech123
 
   
